--- a/package.json
+++ b/package.json
@@ -7,11 +7,19 @@
     "export": "npm run build && next export"
   },
   "dependencies": {
+    "clsx": "^1.1.1",
+    "gray-matter": "^4.0.3",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "frontmatter-markdown-loader": "^2.0.0"
+    "@types/node": "^17.0.12",
+    "@types/react": "^17.0.38",
+    "autoprefixer": "^10.4.2",
+    "frontmatter-markdown-loader": "^2.0.0",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.17",
+    "typescript": "^4.5.5"
   }
 }
