--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.38",
     "autoprefixer": "^10.4.2",
     "frontmatter-markdown-loader": "^2.0.0",
+    "netlify-ts": "^1.2.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.17",
     "typescript": "^4.5.5"
