--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "export": "npm run build && next export"
+    "export": "npm run build && next export",
+    "gen:config": "./node_modules/yaml-convert/cli.js  --input public/admin/config.yml --output public/admin/config.js --node",
+    "gen:types": "./node_modules/netlify-ts/bin/run public/admin/config.yml && mv ./netlify-types.ts ./lib/"
   },
   "dependencies": {
     "clsx": "^1.1.1",
     "gray-matter": "^4.0.3",
+    "netlify-cms-app": "^2.15.65",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
@@ -21,6 +24,7 @@
     "netlify-ts": "^1.2.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.17",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "yaml-convert": "^1.0.1"
   }
 }
