--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: "Teide-Technologies/amap-website"
   branch: main
+cms_manual_init: true
 media_folder: static/img
 slug:
   encoding: "ascii"
