--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "start": "next start",
     "export": "npm run build && next export",
     "gen:config": "./node_modules/yaml-convert/cli.js  --input public/admin/config.yml --output public/admin/config.js --node",
-    "gen:types": "./node_modules/netlify-ts/bin/run public/admin/config.yml && mv ./netlify-types.ts ./lib/"
+    "gen:types": "./node_modules/netlify-ts/bin/run public/admin/config.yml && mv ./netlify-types.ts ./lib/",
+    "plasmic:sync": "plasmic sync -p 7CzphteDn95cERg7nN7EAF"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.3",
+    "@heroicons/react": "^1.0.5",
+    "@plasmicapp/loader-nextjs": "^1.0.61",
+    "@plasmicapp/react-web": "^0.2.91",
     "clsx": "^1.1.1",
     "gray-matter": "^4.0.3",
     "netlify-cms-app": "^2.15.65",
