--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -3,27 +3,28 @@ backend:
   repo: "Teide-Technologies/amap-website"
   branch: main
 cms_manual_init: true
-media_folder: static/img
+media_folder: public/static/img
 slug:
   encoding: "ascii"
   clean_accents: true
   sanitize_replacement: "_"
 collections:
-  - name: "pages"
-    label: "Pages"
+  - name: "components"
+    label: "Informations générales"
     files:
-      - label: "Header"
-        name: "header"
-        file: "content/header.md"
-        fields:
-          - { label: "Title", name: "title", widget: "string" }
-      - label: "Footer"
+      - label: "Footer du site"
         name: "footer"
         file: "content/footer.md"
         fields:
-          - { label: "Title", name: "title", widget: "string" }
+          - { label: "Adresse", name: "address", widget: "string" }
+          - { label: "Code postal", name: "postcode", widget: "string" }
+          - { label: "Ville", name: "city", widget: "string" }
+          - { label: "Horaires", name: "schedule", widget: "string" }
           - { label: "Téléphone", name: "phone", widget: "string" }
           - { label: "Email", name: "email", widget: "string" }
+  - name: "pages"
+    label: "Pages"
+    files:
       - label: "Home"
         name: "home"
         file: "content/home.md"
