--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "netlify-cms-app": "^2.15.65",
     "next": "latest",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-hook-form": "^7.27.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.12",
