--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "build": "next build",
     "start": "next start",
     "export": "npm run build && next export",
-    "gen:config": "./node_modules/yaml-convert/cli.js  --input public/admin/config.yml --output public/admin/config.js --node",
     "gen:types": "./node_modules/netlify-ts/bin/run public/admin/config.yml && mv ./netlify-types.ts ./lib/",
+    "gen:config": "./node_modules/yaml-convert/cli.js  --input public/admin/config.yml --output public/admin/config.js --node && yarn gen:types",
     "plasmic:sync": "plasmic sync -p 7CzphteDn95cERg7nN7EAF"
   },
   "dependencies": {
