--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -47,6 +47,13 @@ collections:
     folder: "content/contracts"
     create: true
     fields:
+      - {
+          label: "ID",
+          name: "id",
+          widget: "ncw-id",
+          prefix: "contract",
+          hidden: true,
+        }
       - { label: "Nom du contrat", name: "title", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
       - {
