--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -113,7 +113,7 @@ collections:
     label_singular: "Actualité"
     folder: "content/articles"
     create: true
-    slug: "{{year}}-{{month}}-{{day}}_{{slug}}"
+    slug: "{{slug}}-{{year}}-{{month}}-{{day}}"
     fields:
       - { label: "Titre", name: "title", widget: "string", required: true }
       - {
