--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "next-optimized-images": "^2.6.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-hook-form": "^7.27.0"
+    "react-hook-form": "^7.27.0",
+    "react-markdown": "^8.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.2",
     "@types/node": "^17.0.12",
     "@types/react": "^17.0.38",
     "autoprefixer": "^10.4.2",
