--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@plasmicapp/react-web": "^0.2.91",
     "clsx": "^1.1.1",
     "gray-matter": "^4.0.3",
+    "imagemin-mozjpeg": "^10.0.0",
     "imagemin-optipng": "^8.0.0",
     "netlify-cms-app": "^2.15.65",
     "next": "latest",
@@ -32,6 +33,9 @@
     "@types/node": "^17.0.12",
     "@types/react": "^17.0.38",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.9.0",
+    "eslint-config-next": "^12.1.0",
+    "eslint-config-prettier": "^8.4.0",
     "frontmatter-markdown-loader": "^2.0.0",
     "netlify-ts": "^1.2.0",
     "postcss": "^8.4.5",
