--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gray-matter": "^4.0.3",
     "imagemin-mozjpeg": "^9.0.0",
     "imagemin-optipng": "^8.0.0",
+    "imagemin-svgo": "^9.0.0",
     "netlify-cms-app": "^2.15.65",
     "next": "latest",
     "next-compose-plugins": "^2.2.1",
