--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "imagemin-optipng": "^8.0.0",
     "imagemin-svgo": "^9.0.0",
     "netlify-cms-app": "^2.15.65",
+    "netlify-identity-widget": "^1.9.2",
     "next": "latest",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
