--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "next": "latest",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
+    "next-seo": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.27.0",
