--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
+    "lint": "next lint --fix",
     "export": "npm run build && next export",
     "gen:types": "node create-netlify-types.js",
     "gen:config": "./node_modules/yaml-convert/cli.js  --input public/admin/config.yml --output public/admin/config.js --node && yarn gen:types",
@@ -22,23 +23,24 @@
     "imagemin-svgo": "^9.0.0",
     "netlify-cms-app": "^2.15.65",
     "netlify-identity-widget": "^1.9.2",
-    "next": "latest",
+    "next": "^12.1.6",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
     "next-plausible": "^3.1.9",
     "next-seo": "^5.1.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
     "react-hook-form": "^7.27.0",
     "react-markdown": "^8.0.0"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
     "@types/node": "^17.0.12",
-    "@types/react": "^17.0.39",
+    "@types/react": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "autoprefixer": "^10.4.2",
     "eslint": "^8.9.0",
+    "eslint-config-blitz": "^0.45.4",
     "eslint-config-next": "^12.1.0",
     "eslint-config-prettier": "^8.4.0",
     "frontmatter-markdown-loader": "^2.0.0",
