--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,9 @@
     "jsx": "preserve",
     "baseUrl": "./",
     "paths": {
-      "@app": ["src"],
-      "@app/*": ["src/*"],
-      "@core": ["src/core"],
+      "@src/*": ["src/*"],
       "@core/*": ["src/core/*"],
-      "@layouts": ["src/core/layouts"],
+      "@modules/*": ["src/modules/*"],
       "@layouts/*": ["src/core/layouts/*"]
     }
   },
