--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "plasmic:sync": "plasmic sync -p 7CzphteDn95cERg7nN7EAF"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^1.0.0-beta.1",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "@ncwidgets/id": "^0.9.0",
