--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
     "paths": {
       "@src/*": ["src/*"],
       "@core/*": ["src/core/*"],
+      "@cms/*": ["src/cms/*"],
       "@modules/*": ["src/modules/*"],
       "@layouts/*": ["src/core/layouts/*"]
     }
