--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.27.0",
-    "react-markdown": "^8.0.0"
+    "react-markdown": "^8.0.0",
+    "react-reveal": "^1.2.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.2",
