--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "export": "npm run build && next export",
     "gen:types": "node create-netlify-types.js",
     "gen:config": "./node_modules/yaml-convert/cli.js  --input public/admin/config.yml --output public/admin/config.js --node && yarn gen:types",
-    "plasmic:sync": "plasmic sync -p 7CzphteDn95cERg7nN7EAF"
+    "gen:config_": "ts-node public/admin/config.src.ts && yarn gen:types"
   },
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.1",
@@ -45,7 +45,9 @@
     "netlify-ts": "^1.2.0",
     "postcss": "^8.4.5",
     "tailwindcss": "^3.0.17",
+    "ts-node": "^10.8.1",
     "typescript": "^4.5.5",
-    "yaml-convert": "^1.0.1"
+    "yaml-convert": "^1.0.1",
+    "yml": "^1.0.0"
   }
 }
