--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/react": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "autoprefixer": "^10.4.2",
+    "cssnano": "^5.1.11",
     "eslint": "^8.9.0",
     "eslint-config-blitz": "^0.45.4",
     "eslint-config-next": "^12.1.0",
