add identity widget

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.27.0",
     "react-markdown": "^8.0.0",
+    "react-netlify-identity": "^0.2.5",
     "react-reveal": "^1.2.2"
   },
   "devDependencies": {
