--- a/package.json
+++ b/package.json
@@ -14,16 +14,17 @@
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
     "@ncwidgets/id": "^0.9.0",
+    "@next/font": "^13.0.0",
     "clsx": "^1.1.1",
     "gray-matter": "^4.0.3",
     "netlify-cms-app": "^2.15.65",
     "netlify-identity-widget": "^1.9.2",
-    "next": "^12.1.6",
+    "next": "^13.0.0",
     "next-compose-plugins": "^2.2.1",
     "next-optimized-images": "^2.6.2",
     "next-seo": "^5.1.0",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.27.0",
     "react-markdown": "^8.0.0",
     "react-netlify-identity": "^0.2.5",
@@ -38,7 +39,7 @@
     "cssnano": "^5.1.11",
     "eslint": "^8.9.0",
     "eslint-config-blitz": "^0.45.4",
-    "eslint-config-next": "^12.1.0",
+    "eslint-config-next": "^13.0.0",
     "eslint-config-prettier": "^8.4.0",
     "frontmatter-markdown-loader": "^2.0.0",
     "netlify-ts": "^1.2.0",
